<resources>
    <string name="app_name">凉都安监通</string>
    <string name="action_settings">Settings</string>
    <string name="login_1">请输入用户名</string>
    <string name="login_2">请输入密码</string>
    <string name="login_3">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="login_4">设&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置</string>
    <string name="login_5">© 济南蓝动激光技术有限公司</string>
    <string name="login_6">连接网络： </string>
    <string name="login_7">所属科室： </string>
    <string name="login_8">用&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;户： </string>
    <string name="login_9">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码： </string>
    <string name="login_10">*&#160;&#160;&#160;&#160;执法统计查询入口 </string>
    <string name="home_00">拍摄</string>
    <string name="home_01">企业信息</string>
    <string name="home_02">监管执法</string>
    <string name="home_03">执法统计</string>
    <string name="home_04">执法人员</string>
    <string name="home_05">隐患复查</string>
    <string name="home_06">事故调查</string>
    <string name="home_07">安全知识库</string>
    <string name="home_08">危化特性</string>
    <string name="home_09">职业卫生检查</string>
    <string name="home_10">法律法规</string>
    <string name="home_11">数据管理</string>
    <string name="home_12">系统工具</string>
    <string name="home_13">在&#160;&#160;线&#160;&#160;查&#160;&#160;询</string>
    <string name="home_14">检查计划</string>
    <string name="home_15">复查计划</string>
    <string name="home_16">取证|扫描</string>
    <string name="home_17">可添加执法计划展开执法工作出具法律文书</string>
    <string name="home_18">可查询并添加复查计划展开复查工作</string>
    <string name="home_19">可查询企业各类相关并添加执法计划</string>
    <string name="home_20">可制定职业卫生检查计划并开展检查工作</string>
    <string name="home_21">您有新的消息</string>
    <string name="home_22">可查询执法人员信息</string>
    <string name="home_23">可查询执法计划以及相应的执法统计数据等</string>
    <string name="home_24">可查询已立案事故的相关执法文件并下载查看</string>
    <string name="home_25">本&#160;&#160;地&#160;&#160;资&#160;&#160;料</string>
    <string name="home_26">可查询各类安全方面的法律法规文书等</string>
    <string name="home_27">可查询常见危险化学品的详细特性以及处理手段等</string>
    <string name="home_28">可查询包括事故案例、防火间距、危险事故处置等安全知识</string>
    <string name="home_29">快速执法</string>
    <string name="information_01">企业名称： </string>
    <string name="information_02">请输入需要查找的企业名称</string>
    <string name="information_03">非重点监管</string>
    <string name="information_04">重点监管</string>
    <string name="information_05">企业列表</string>
    <string name="information_06">企业性质： </string>
    <string name="check_up_01">制定计划</string>
    <string name="check_up_02">计划列表</string>
    <string name="check_up_03">制定检查方案</string>
    <string name="check_up_04">开展执法检查</string>
    <string name="check_up_05">制定检查方案</string>
    <string name="check_up_06">制定检查计划</string>
    <string name="check_up_07">选择模板</string>
    <string name="check_up_item_01">企业名称： </string>
    <string name="check_up_item_02">检查类型： </string>
    <string name="check_up_item_03">检查场所： </string>
    <string name="check_up_item_04">计划日期： </string>
    <string name="check_up_item_05">检查日期： </string>
    <string name="check_up_item_06">检查结果： </string>
    <string name="check_up_item_07">处理状态： </string>
    <string name="check_up_item_08">整改期限： </string>
    <string name="check_up_item_09">点击修改删除</string>
    <string name="check_up_item_10">点击查看</string>
    <string name="check_up_item_11">组&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;长： </string>
    <string name="check_up_item_12">组&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;员： </string>
    <string name="check_up_item_13">检查路线： </string>
    <string name="check_up_item_14">分组时间： </string>
    <string name="check_up_item_15">点击删除或修改</string>
    <string name="check_up_item_16">隐患地点： </string>
    <string name="check_up_item_17">检&#160;&#160;查&#160;&#160;人： </string>
    <string name="check_up_item_18">检查时间： </string>
    <string name="check_up_item_19">所属计划： </string>
    <string name="check_up_item_20">隐患类型： </string>
    <string name="check_up_item_21">企业类型： </string>
    <string name="check_up_item_22">隐患内容： </string>
    <string name="check_up_item_23">点击快速生成计划</string>
    <string name="check_up_date_00">--点击选择--</string>
    <string name="check_up_date_01">被检查单位：</string>
    <string name="check_up_date_02">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="check_up_date_03">法定代表人：</string>
    <string name="check_up_date_04">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;务：</string>
    <string name="check_up_date_05">联&#160;系&#160;&#160;电&#160;话：</string>
    <string name="check_up_date_06">检&#160;查&#160;&#160;场&#160;所：</string>
    <string name="check_up_date_07">起&#160;始&#160;&#160;时&#160;间：</string>
    <string name="check_up_date_08">结&#160;束&#160;&#160;时&#160;间：</string>
    <string name="check_up_date_09">检&#160;查&#160;&#160;类&#160;型：</string>
    <string name="check_up_date_10">执&#160;法&#160;&#160;单&#160;位：</string>
    <string name="check_up_date_11">执&#160;法&#160;&#160;人&#160;员：</string>
    <string name="check_up_date_12">检&#160;&#160;查&#160;&#160;表</string>
    <string name="check_up_date_13">添加问题</string>
    <string name="check_up_date_14">制作文书</string>
    <string name="check_up_date_15">删除问题</string>
    <string name="check_up_date_16">保存计划</string>
    <string name="check_up_date_17">取&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;消</string>
    <string name="check_up_date_18">--暂无--</string>
    <string name="check_up_date_19">汇总问题</string>
    <string name="check_up_date_20">上传问题</string>
    <string name="check_up_date_21">制&#160;定&#160;&#160;依&#160;据：</string>
    <string name="check_up_date_22">联&#160;合&#160;&#160;执&#160;法</string>
    <string name="check_up_date_23">请输入其他单位名称</string>
    <string name="check_up_date_24">全&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;选</string>
    <string name="check_up_date_25">请输入检查类型</string>
    <string name="people_group_01">组&#160;&#160;&#160;&#160;长： </string>
    <string name="people_group_02">组&#160;&#160;&#160;&#160;员： </string>
    <string name="people_group_03">保&#160;&#160;&#160;&#160;存</string>
    <string name="people_group_04">取&#160;&#160;&#160;&#160;消</string>
    <string name="people_group_05">--点击添加--</string>
    <string name="people_group_06">路&#160;&#160;&#160;&#160;线： </string>
    <string name="people_group_07">请输入路线</string>
    <string name="people_group_08">添加路线</string>
    <string name="people_group_09">已制定的分组</string>
    <string name="add_check_problem_01">检查结果： </string>
    <string name="add_check_problem_02">处理方式： </string>
    <string name="add_check_problem_03">整改期限： </string>
    <string name="add_check_problem_04">请输入天数</string>
    <string name="add_check_problem_05">罚款金额： </string>
    <string name="add_check_problem_06">处理结果： </string>
    <string name="add_check_problem_07">问题描述： </string>
    <string name="add_check_problem_08">现场取证： </string>
    <string name="add_check_problem_09">问题类型： </string>
    <string name="add_check_problem_10">检查项目： </string>
    <string name="add_check_problem_11">查&#160;&#160;&#160;&#160;询</string>
    <string name="add_check_problem_12">参考内容：</string>
    <string name="add_check_problem_13">请输入罚款金额（元）</string>
    <string name="add_check_problem_14">请输入罚款金额（元）</string>
    <string name="add_check_problem_15">拍&#160;&#160;&#160;&#160;照</string>
    <string name="add_check_problem_16">天</string>
    <string name="add_check_problem_17">元</string>
    <string name="add_check_problem_18">问题表</string>
    <string name="add_check_problem_19">录&#160;&#160;&#160;&#160;音</string>
    <string name="add_check_problem_20">录&#160;&#160;&#160;&#160;像</string>
    <string name="add_check_problem_21">(个人处罚上限为50元，企业处罚上限为1000元)</string>
    <string name="add_check_problem_22">隐患地点： </string>
    <string name="add_check_problem_23">隐患部位： </string>
    <string name="add_check_problem_24">督办时间： </string>
    <string name="add_check_problem_25">督办级别： </string>
    <string name="add_check_problem_26">督办单位： </string>
    <string name="add_check_problem_27">挂&#160;&#160;牌&#160;&#160;督&#160;&#160;办</string>
    <string name="add_check_problem_28">其他检查人</string>
    <string name="add_check_problem_29">检查单位：</string>
    <string name="add_check_problem_30">检查部门：</string>
    <string name="add_check_problem_31">执法文书：</string>
    <string name="add_check_problem_32">整改结果：</string>
    <string name="add_check_problem_33">添&#160;&#160;&#160;&#160;加</string>
    <string name="add_check_problem_34">整改照片： </string>
    <string name="add_check_problem_35">隐患照片： </string>
    <string name="date_transmission_00">查看本地文书</string>
    <string name="date_transmission_01">点击上传数据</string>
    <string name="date_transmission_02">点击下载数据</string>
    <string name="date_transmission_03">查看临时文书</string>
    <string name="date_transmission_04">查看正式文书</string>
    <string name="date_transmission_05">文书类型：</string>
    <string name="date_transmission_06">文书列表</string>
    <string name="date_transmission_07">查看临时文书</string>
    <string name="date_transmission_08">查看正式文书</string>
    <string name="enterprise_information_date_01">工商注册号：</string>
    <string name="enterprise_information_date_02">机&#160;构&#160;&#160;代&#160;码： </string>
    <string name="enterprise_information_date_03">安全负责人：</string>
    <string name="enterprise_information_date_04">安全员电话：</string>
    <string name="enterprise_information_date_05">企&#160;业&#160;&#160;类&#160;型：</string>
    <string name="enterprise_information_date_06">企&#160;业&#160;&#160;地&#160;址：</string>
    <string name="enterprise_information_date_07">企&#160;业&#160;&#160;名&#160;称：</string>
    <string name="enterprise_information_date_08">返&#160;&#160;&#160;&#160;全&#160;&#160;&#160;&#160;回</string>
    <string name="enterprise_information_date_09">矿井状态：</string>
    <string name="enterprise_information_date_10">矿井类型：</string>
    <string name="enterprise_information_date_11">地质储量：</string>
    <string name="enterprise_information_date_12">可采储量：</string>
    <string name="enterprise_information_date_13">设计生产能力：</string>
    <string name="enterprise_information_date_14">核定生产能力：</string>
    <string name="enterprise_information_date_15">矿区面积：</string>
    <string name="enterprise_information_date_16">上半年产量：</string>
    <string name="enterprise_information_date_17">主要煤种：</string>
    <string name="enterprise_information_date_18">可采煤层：</string>
    <string name="enterprise_information_date_19">开采工艺：</string>
    <string name="enterprise_information_date_20">开拓方式：</string>
    <string name="enterprise_information_date_21">运输方式：</string>
    <string name="enterprise_information_date_22">突出危险性鉴定：</string>
    <string name="enterprise_information_date_23">瓦斯等级：</string>
    <string name="enterprise_information_date_24">煤层自燃等级：</string>
    <string name="enterprise_information_date_25">煤层爆炸性：</string>
    <string name="enterprise_information_date_26">矿井通风方式：</string>
    <string name="enterprise_information_date_27">修改信息</string>
    <string name="check_up_main_06">制定复查计划</string>
    <string name="check_up_main_09">执法信息统计</string>
    <string name="check_up_main_10">修改企业信息</string>
    <string name="check_up_main_11">查看企业隐患</string>
    <string name="included_sample_12">执法证号暂无</string>
    <string name="included_sample_13">姓名暂无</string>
    <string name="included_sample_14">部门暂无</string>
    <string name="personnel_management_01">所属单位：</string>
    <string name="personnel_management_02">所属部门：</string>
    <string name="personnel_management_03">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="personnel_management_04">请输入要查询的人员姓名</string>
    <string name="personnel_management_05">人员列表</string>
    <string name="review_main_01">需复查企业列表</string>
    <string name="law_item_01">法条反查： </string>
    <string name="law_item_02">请输入需要查询的法条</string>
    <string name="law_item_03">法条列表</string>
</resources>