<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_3"
    android:gravity="end">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color_1"
        android:orientation="vertical">
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_06"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_marginTop="0.1dp"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"
            />
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_05"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_marginTop="0.1dp"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"
           />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_04"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_marginTop="0.1dp"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_main_09"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_marginTop="0.1dp"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_main_11"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_marginTop="0.1dp"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"
            />
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_main_10"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"
            android:layout_marginTop="0.1dp"
           />
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_up_main_06"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/main_color_3"
            android:layout_margin="0.1dp"
            />
    </LinearLayout>

</LinearLayout>