<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/i_title_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/law_item_01"
            android:layout_weight="0.3"
            android:gravity="end"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/law_item_02"
            android:textSize="14sp"
            android:textColor="@color/main_color_3"
            android:background="@drawable/et_bg_01"
            android:gravity="center"
            android:id="@+id/et_name"
            android:layout_weight="0.6"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button"
            android:text="@string/add_check_problem_11"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:id="@+id/bt_review"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color_3"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/law_item_03"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_01"/>
</LinearLayout>