<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg_examine_item"
    android:descendantFocusability= "blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_01"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_01"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_02"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_02"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_03"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_03"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_04"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_04"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_05"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_05"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_06"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_06"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_07"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_07"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/check_up_item_08"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/tx_add_check_up_08"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/main_color_3"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|end">
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/img_pen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/check_up_item_09"
            android:textSize="12sp"
            android:textColor="@color/main_color_3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/main_color_3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/main_color_1"/>
</LinearLayout>