<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/i_title_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/personnel_management_01"
            android:layout_weight="0.3"
            android:gravity="end"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/e_car_num_6"
            android:gravity="center"
            android:entries="@array/s_car_num_10"
            android:layout_gravity="center"
            android:layout_weight="0.7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/personnel_management_02"
            android:layout_weight="0.3"
            android:gravity="end"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:id="@+id/e_car_num_7"
            android:gravity="center"
            android:entries="@array/s_car_num_10"
            android:layout_gravity="center"
            android:layout_weight="0.7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_3"
            android:textSize="14sp"
            android:text="@string/personnel_management_03"
            android:layout_weight="0.2"
            android:gravity="end"
            android:visibility="gone"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/personnel_management_04"
            android:textSize="14sp"
            android:textColor="@color/main_color_3"
            android:background="@drawable/et_bg_01"
            android:gravity="center"
            android:id="@+id/et_name"
            android:layout_weight="0.6"
            android:visibility="gone"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:layout_margin="10dp"
            android:text="@string/add_check_problem_11"
            android:id="@+id/button_01"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color_3"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/personnel_management_05"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_01"/>
</LinearLayout>