<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color_3"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/enterprise_num"
        android:padding="5dp"
        android:maxLines="3"
        android:minLines="3"
        android:ellipsize="end"
        android:background="@drawable/bg_examine_item"
        android:layout_weight="1"
        android:text="@string/included_sample_12"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color_3"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/enterprise_name"
        android:padding="5dp"
        android:maxLines="3"
        android:minLines="3"
        android:ellipsize="end"
        android:background="@drawable/bg_examine_item"
        android:layout_weight="1"
        android:text="@string/included_sample_13"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color_3"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/enterprise_code"
        android:padding="5dp"
        android:maxLines="3"
        android:minLines="3"
        android:ellipsize="end"
        android:background="@drawable/bg_examine_item"
        android:layout_weight="1"
        android:text="@string/included_sample_14"/>

</LinearLayout>